# dotfiles

./: .gitignore  kitty  newneo-tree filesystem [1]
aerospace/: aerospace.toml
clangd/: CMakeLists.txt  config.yaml  mac-howto.txt
fastfetch/: catgirl.txt  config.jsonc
hypr/: hyprland.conf
kitty/: Kanagawa.conf  bash-configs  kitty.conf  todo.txt
neofetch/: config.conf
new/home/g3matheson/dotfiles/nvim/: notes.txt
nvim/: init.lua  lazy-lock.json  lazyvim.json  notes.txt  practice.cpp  todo.txt
nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
nvim/lua/custom/: filetypes.lua
nvim/lua/plugins/: auto-session.lua  blink.lua  bufferline.lua  cpp.lua  disable.lua  dotnet.lua  git-conflict.lua  git-signs.lua  kanagawa.lua  lean.lua  lualine.lua  markdown.lua  marks.lua  neo-tree.lua  orgmode.lua  python.lua  snacks.lua  soil.lua  theme.lua  todo-comments.lua  tree-sitter.lua  vimtex.lua  visual-multi.lua  which-key.lua
waybar/: config.jsonc  kanagawa.css  style.css
zathura/: notes.txt  zathurarc
